Replace external image sources with local images

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <div class="profile-image-container">
             <img
               class="profile-image"
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS3-NutHBmZJpae5xr9_Iz3MqHkvPikDd3fkRihrxMM0xgj-TEWRviDKjBHYjvZutcKHNk&usqp=CAU"
+              src="images/image1.jpg"
               alt="Harun Nzai Randu"
             />
             <div class="status-indicator"></div>
@@ -206,7 +206,7 @@
             </div>
           </div>
           <div class="hero-image">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS3-NutHBmZJpae5xr9_Iz3MqHkvPikDd3fkRihrxMM0xgj-TEWRviDKjBHYjvZutcKHNk&usqp=CAU" alt="Harun Nzai Randu" />
+            <img src="images/image1.jpg" alt="Harun Nzai Randu" />
           </div>
         </div>
       </section>
@@ -264,7 +264,7 @@
               </div>
             </div>
             <div class="about-image">
-              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS3-NutHBmZJpae5xr9_Iz3MqHkvPikDd3fkRihrxMM0xgj-TEWRviDKjBHYjvZutcKHNk&usqp=CAU" alt="About Harun" />
+              <img src="images/image2.jpg" alt="About Harun" />
             </div>
           </div>
         </div>
