--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <div class="profile-image-container">
             <img
               class="profile-image"
-              src="images/image1.jpg"
+              src="images/image1.jpeg"
               alt="Harun Nzai Randu"
             />
             <div class="status-indicator"></div>
@@ -206,7 +206,7 @@
             </div>
           </div>
           <div class="hero-image">
-            <img src="images/image1.jpg" alt="Harun Nzai Randu" />
+            <img src="images/image1.jpeg" alt="Harun Nzai Randu" />
           </div>
         </div>
       </section>
@@ -264,7 +264,7 @@
               </div>
             </div>
             <div class="about-image">
-              <img src="images/image2.jpg" alt="About Harun" />
+              <img src="images/image2.jpeg" alt="About Harun" />
             </div>
           </div>
         </div>
